update index and _config

--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ social:
 
   - name: LinkedIn
     icon: linkedin
-    username: Paul E. Soto
-    url: https://linkedin.com/pesoto
+    username: Zhiqing (Robin) Hong
+    url: https://www.linkedin.com/in/zhiqing-hong-781a62109/
     desc: Connect with me on LinkedIn
     share: true
