--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: >
   Master student in computer science
 baseurl: ""
 url: "https://killuakukuroo.github.io/"
-github_username:  pesoto
+github_username:  killuakukuroo
 disqus_baseurl: "https://killuakukuroo.github.io/"
 disqus_shortname: https-killuakukuroo-github-io
 permalink: :title
